Fix bug with visibility the user and the cart controls on mobile view
You still saw cart and user control on small viewpoint

--- a/client/src/components/HeaderModals/HeaderModals.module.css
+++ b/client/src/components/HeaderModals/HeaderModals.module.css
@@ -58,6 +58,10 @@
   .user,
   .shopIconContainer,
   .overlay {
-    display: none;
+    display: none !important;
+  }
+
+  .currencySelect {
+    margin-right: 0;
   }
 }
