--- a/client/src/components/modals/CurrencySelect/CurrencySelect.module.css
+++ b/client/src/components/modals/CurrencySelect/CurrencySelect.module.css
@@ -22,6 +22,7 @@
 
 .downArrow {
   padding-left: 10px;
+  stroke: black;
 }
 
 .upArrow {
